--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
 	  "allowJs": true,
 	  "paths": {
 		"/@/*": ["./src/*"],
+		"/@zb/pinia": ["./node_modules/pinia"],
 		"@zb/hooks": ["./src/common/modules/hooks"],
 		"@zb/i18n": ["./src/common/modules/i18n"],
 		"@zb/common": ["./src/common"],
