--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/tsconfig": "^0.1.3",
     "bestzip": "^2.2.1",
-    "esbuild": "^0.17.3",
     "eslint": "^8.32.0",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.3",
@@ -55,7 +54,6 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-externals": "^0.5.1",
-    "vue-tsc": "^1.0.24",
-    "wp-pot": "^1.10.2"
+    "vue-tsc": "^1.0.24"
   }
 }
