--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vueuse/core": "^9.11.1",
     "@wordpress/i18n": "^4.25.0",
     "axios": "^1.2.3",
@@ -47,13 +48,14 @@
     "@vue/tsconfig": "^0.1.3",
     "bestzip": "^2.2.1",
     "eslint": "^8.32.0",
+    "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.3",
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-externals": "^0.5.1",
-    "eslint-plugin-vue": "^9.9.0",
+    "vite-plugin-mkcert": "^1.12.0",
     "vue-tsc": "^1.0.24"
   }
 }
