--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@types/vimeo": "^2.1.5",
+    "@types/youtube": "^0.0.47",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vueuse/core": "^9.11.1",
     "@wordpress/i18n": "^4.25.0",
