--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "publish": "yarn run publish:packages",
     "build:types": "tsc --build",
     "postinstall": "composer install",
+    "test": "composer run-script phpcs && composer run-script phpstan",
     "lint": "tsc --noEmit && eslint"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@types/vimeo": "^2.1.5",
+    "@types/youtube": "^0.0.47",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vueuse/core": "^9.11.1",
     "@wordpress/i18n": "^4.25.0",
